--- a/Chess.DesktopClient/Chess.DesktopClient.csproj
+++ b/Chess.DesktopClient/Chess.DesktopClient.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chess.Models\Chess.Models.csproj" />
+  </ItemGroup>
+
 </Project>
