--- a/Chess.DesktopClient/Chess.DesktopClient.csproj
+++ b/Chess.DesktopClient/Chess.DesktopClient.csproj
@@ -17,6 +17,7 @@
     <None Remove="images\empty.jpg" />
     <None Remove="images\field - Copy.jpg" />
     <None Remove="images\field.jpg" />
+    <None Remove="images\last.jpg" />
     <None Remove="images\selected.jpg" />
     <None Remove="images\welephant.jpg" />
     <None Remove="images\whorse.jpg" />
@@ -38,6 +39,7 @@
     <Resource Include="images\bqueen.jpg" />
     <Resource Include="images\brook.jpg" />
     <Resource Include="images\empty.jpg" />
+    <Resource Include="images\last.jpg" />
     <Resource Include="images\selected.jpg" />
     <Resource Include="images\welephant.jpg" />
     <Resource Include="images\whorse.jpg" />
